# adela-webhook

./: .replit  AriaADELAntosdecitas.sh  aria_autofix_log.txt  autodeploy_adela.sh  deploy_adela.sh  main.py  pyproject.toml  requirements.txt  verifica_y_repara_adela.sh
